[gd_scene load_steps=5 format=3 uid="uid://djnhluye5t8hq"]

[ext_resource type="Script" path="res://Menu.gd" id="1_jgijh"]
[ext_resource type="FontFile" uid="uid://dn7x8ywfim7a" path="res://Wallpaper/The Wild Breath of Zelda.otf" id="2_ad2pm"]
[ext_resource type="Texture2D" uid="uid://kqq5nl34oqj0" path="res://Wallpaper/lolImg.jpeg" id="2_hb4x6"]
[ext_resource type="AudioStream" uid="uid://c4jimp6s6v2os" path="res://Wallpaper/Ruins of Zin Azshari.mp3" id="4_px1ij"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jgijh")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 54.0
offset_right = 822.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0.47451, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ad2pm")
theme_override_font_sizes/font_size = 67
text = "Paths of Adventure"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 379.0
offset_right = 351.0
offset_bottom = 483.0

[node name="Play" type="Button" parent="VBoxContainer"]
self_modulate = Color(0.843137, 0.356863, 1, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ad2pm")
theme_override_font_sizes/font_size = 36
text = "PLAY"

[node name="History" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ad2pm")
theme_override_font_sizes/font_size = 26
text = "History
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ad2pm")
theme_override_font_sizes/font_size = 26
text = "QUIT"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576.25, 322)
scale = Vector2(0.612672, 0.609434)
texture = ExtResource("2_hb4x6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_px1ij")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/History" to="." method="_on_history_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
